# cortecs-cc-toolchain

./: .gitignore  BUILD  Dockerfile  MODULE.bazel  build_clang.sh  tar_all.sh
args/: BUILD
args/linux/: BUILD
args/windows/: BUILD
clang/: BUILD  clang19-headers-19.1.7-r0.apk  clang19-headers.bzl  libclang-includes.bzl  libclang-includes.tar.xz
clang/lib/clang/19/include/: BUILD  outs.bzl  outs.tar.xz
clang/lib/clang/19/include/cuda_wrappers/: BUILD  outs.bzl  outs.tar.xz
clang/lib/clang/19/include/cuda_wrappers/bits/: BUILD  outs.bzl  outs.tar.xz
clang/lib/clang/19/include/fuzzer/: BUILD  outs.bzl  outs.tar.xz
clang/lib/clang/19/include/llvm_libc_wrappers/: BUILD  outs.bzl  outs.tar.xz
clang/lib/clang/19/include/openmp_wrappers/: BUILD  outs.bzl  outs.tar.xz
clang/lib/clang/19/include/orc/: BUILD  outs.bzl  outs.tar.xz
clang/lib/clang/19/include/ppc_wrappers/: BUILD  outs.bzl  outs.tar.xz
clang/lib/clang/19/include/profile/: BUILD  outs.bzl  outs.tar.xz
clang/lib/clang/19/include/sanitizer/: BUILD  outs.bzl  outs.tar.xz
clang/lib/clang/19/include/xray/: BUILD  outs.bzl  outs.tar.xz
clang/lib/clang/19/include/zos_wrappers/: BUILD  outs.bzl  outs.tar.xz
clang/lib/clang/19/lib/x86_64-unknown-linux-gnu/: BUILD
sysroot/: BUILD
sysroot/windows/: BUILD
