"Hermetic toolchain for cortecs"
module(name = "cortecs-cc-toolchain")

bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "platforms", version = "0.0.11")

# Problem: Even with xz compression, the total bin size for all the platforms is still quite large.
# Solution: Store the large binaries in separate repositories.
# Problem: It seems that bazel defaults to fetching all bazel_dep dependencies even if they're not used.
# Solution: Use git_repository dependencies because they are only downloaded when referenced.
git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")
git_repository(
    name = "linux-x86_64",
    remote = "https://github.com/cortecs-lang/cortecs-cc-toolchain-linux-x86_64.git",
    commit = "0475337c0fb2448db8e5d5875537cc2839da4c9b",
)

git_repository(
    name = "alpine-x86_64",
    remote = "https://github.com/cortecs-lang/cortecs-sysroot-alpine-x86_64.git",
    commit = "0e3ffcf04301cfa990aec54cfe585180496202ca",
)

git_repository(
    name = "windows-x86_64",
    remote = "https://github.com/cortecs-lang/cortecs-cc-toolchain-windows-x86_64.git",
    commit = "fcdfef684d5b575ba84a5732beecd6c698f093de",
)

git_repository(
    name = "windows-sysroot-x86_64",
    remote = "https://github.com/cortecs-lang/cortecs-sysroot-windows-x86_64.git",
    commit = "4581a0929dc46a1862e7a08248ab08d7a7687947",
)
